feat: add body structure in index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <p>zdravo</p>
+    <div class="container">
+        <div class="item item-1">header</div>
+        <div class="item item-2">title
+            <h1 id="title">Permaculture Map Berlin</h1>
+            <p id="subtitle">The Problem is the Solution</p>
+        </div>
+        <div class="item item-3">Some Text 1</div>
+        <div class="item item-4">Map</div>
+        <div class="item item-5">Some Text 2</div>
+        <div class="item item-6">footer</div>
+    </div>
   </body>
 </html>
