feat: add paragraph content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <h3>The Problem is the Solution</h3>
       </div>
       <div class="item item-3">
-        Some Text 1
         <p class="text">
           Embark on a journey through our interactive map and uncover the vast
           array of permaculture projects flourishing in Berlin. Rooted in the
@@ -51,13 +50,20 @@
         <button type="button">CONTRIBUTE!</button>
       </div>
       <div class="item item-5">
-        Some Text 2
-        <p class="text">
-          Embark on a journey through our interactive map and uncover the vast
-          array of permaculture projects flourishing in Berlin. Rooted in the
-          foundational principles of Earth Care, People Care, and Fair Shares,
-          each project tells a unique story of sustainable living and community
-          collaboration.
+        <h3>Why Choose Permaculture?</h3>
+        <p>
+          At its core, permaculture is a transformative and regenerative
+          solution to today's pressing ecological challenges. From rejuvenating
+          soil fertility and championing water conservation to mitigating
+          climate change and bolstering biodiversity, it's a holistic approach
+          with tangible benefits for our planet.
+        </p>
+        <br />
+        <p>
+          But the magic of permaculture doesn't stop there. It also fosters a
+          vibrant social environment, advocating for a healthier lifestyle,
+          cooperative spirit, shared resources, and synergistic actions across
+          communities.
         </p>
       </div>
       <div class="item item-6">footer</div>
