style: style two paragraph sections and title section

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       <div class="item item-1">Navbar</div>
       <div class="item item-2">
         <h1 id="title">Permaculture Map Berlin</h1>
-        <h3>The Problem is the Solution</h3>
+        <h2>The Problem is the Solution</h2>
       </div>
       <div class="item item-3">
+        <h3>What's Your Next Step?</h3>
         <p class="text">
           Embark on a journey through our interactive map and uncover the vast
           array of permaculture projects flourishing in Berlin. Rooted in the
@@ -30,11 +31,11 @@
           each project tells a unique story of sustainable living and community
           collaboration.
         </p>
-        <br />
+        <br /> <!--check this br tag-->
         <p>
-          Dive deep, be inspired, and consider adding your own touch. Together,
-          we can grow this map into an even more comprehensive and dynamic
-          reflection of Berlin's thriving permaculture scene.
+          <em>Dig in</em>, be inspired, and consider adding your own touch.
+          Together, we can grow this map into an even more comprehensive and
+          dynamic reflection of Berlin's thriving permaculture scene.
         </p>
       </div>
       <div class="item item-4">
@@ -58,7 +59,6 @@
           climate change and bolstering biodiversity, it's a holistic approach
           with tangible benefits for our planet.
         </p>
-        <br />
         <p>
           But the magic of permaculture doesn't stop there. It also fosters a
           vibrant social environment, advocating for a healthier lifestyle,
