style: add color palets, style button

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
           each project tells a unique story of sustainable living and community
           collaboration.
         </p>
-        <br /> <!--check this br tag-->
+        <br />
+        <!--check this br tag-->
         <p>
           <em>Dig in</em>, be inspired, and consider adding your own touch.
           Together, we can grow this map into an even more comprehensive and
@@ -50,6 +51,7 @@
         ></iframe>
         <button type="button">CONTRIBUTE!</button>
       </div>
+
       <div class="item item-5">
         <h3>Why Choose Permaculture?</h3>
         <p>
