--- a/index.html
+++ b/index.html
@@ -68,7 +68,22 @@
           communities.
         </p>
       </div>
-      <div class="item item-6">footer</div>
+      <div class="item item-6"><ul class="social-networks">
+        <li>
+            <a href="https://facebook.com" target="_blank" rel="noopener"
+                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+        </li>
+        <li>
+            <a href="https://twitter.com" target="_blank" rel="noopener"
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+        </li>
+        <li>
+            <a href="https://youtube.com" target="_blank" rel="noopener"
+                aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+        </li>
+
+      </div>
     </div>
   </body>
+<script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </html>
