style: add flex features to the footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
   </head>
   <body>
     <div class="container">
-      <div class="item item-1">Navbar</div>
+      <div class="item item-1">
+        <div class="logo-div">
+            <p class="logo-paragraph">Logo</p>
+        </div>
+        <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Form Page</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
+    </nav></div>
       <div class="item item-2">
         <h1 id="title">Permaculture Map Berlin</h1>
         <h2>The Problem is the Solution</h2>
