style: add semantic values to html file and restyle heading section

--- a/index.html
+++ b/index.html
@@ -17,22 +17,27 @@
   </head>
   <body>
     <div class="container">
-      <div class="item item-1">
-        <div class="logo-div">
-            <p class="logo-paragraph">Logo</p>
-        </div>
-        <ul class="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Form Page</a></li>
-            <li><a href="#">About Us</a></li>
-        </ul>
-    </nav></div>
+    
+        <header class="item item-1">
+            <div class="logo-div">
+                <p class="logo-paragraph">Logo</p>
+            </div>
+            <nav>
+                <ul class="menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Form Page</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </nav>
+        </header>
+      
+     <main>
       <div class="item item-2">
         <h1 id="title">Permaculture Map Berlin</h1>
         <h2>The Problem is the Solution</h2>
       </div>
       <div class="item item-3">
-        <h3>What's Your Next Step?</h3>
+        <h3 class="paragraph-title">What's Your Next Step?</h3>
         <p class="text">
           Embark on a journey through our interactive map and uncover the vast
           array of permaculture projects flourishing in Berlin. Rooted in the
@@ -62,7 +67,7 @@
       </div>
 
       <div class="item item-5">
-        <h3>Why Choose Permaculture?</h3>
+        <h3 class="paragraph-title">Why Choose Permaculture?</h3>
         <p>
           At its core, permaculture is a transformative and regenerative
           solution to today's pressing ecological challenges. From rejuvenating
@@ -77,6 +82,7 @@
           communities.
         </p>
       </div>
+    </main>
       <div class="item item-6"><ul class="social-networks">
         <li>
             <a href="https://facebook.com" target="_blank" rel="noopener"
