--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
             <nav>
                 <ul class="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Form Page</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="form.html">Form Page</a></li>
                     <li><a href="#">About Us</a></li>
                 </ul>
             </nav>
