feat: add footer to form.html

--- a/form.html
+++ b/form.html
@@ -16,7 +16,29 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    paragraph
+    <div class="container-form">
+        <header class="item form-item-1">navbar</header>
+        <main class=form-main>
+            <div class="item form-item-2">title</div>
+            <div class="item form-item-3">form</div>
+            <div class="item form-item-4">photo</div>
+        </main>
+    
+        <footer class="item item-6">
+            <ul class="social-networks">
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+                </li>
+                <li>
+                    <a href="https://youtube.com" target="_blank" rel="noopener"
+                        aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+                </li>
+        </footer>
   </body>
   <script
     src="https://kit.fontawesome.com/c7dbda0798.js"
