--- a/form.html
+++ b/form.html
@@ -16,15 +16,43 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div class="container-form">
-        <header class="item form-item-1">navbar</header>
-        <main class=form-main>
-            <div class="item form-item-2">title</div>
-            <div class="item form-item-3">form</div>
-            <div class="item form-item-4">photo</div>
+    <div class="container">
+        <header class="item item-1">
+            <div class="logo-div">
+                <p class="logo-paragraph">Logo</p>
+            </div>
+            <nav>
+                <ul class="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="form.html">Form Page</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main class="form-main">
+            <div class="item item-2">
+                <h1 id="title">Permaculture Map Berlin</h1>
+                <h2>The Problem is the Solution</h2>
+            </div>
+            <div class="item form-item-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Deserunt ratione maiores cupiditate, ad ipsa enim pariatur magni! Ullam vero ea corporis nostrum nam fugit aperiam.
+                  Vitae perspiciatis repellendus beatae vero? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt ratione maiores cupiditate, ad ipsa enim pariatur magni! Ullam vero ea corporis nostrum nam fugit aperiam.
+                Vitae perspiciatis repellendus beatae vero? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt ratione maiores cupiditate, ad ipsa enim pariatur magni! Ullam vero ea corporis nostrum nam fugit aperiam.
+                Vitae perspiciatis repellendus beatae vero? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt ratione maiores cupiditate, ad ipsa enim pariatur magni! Ullam vero ea corporis nostrum nam fugit aperiam.
+                Vitae perspiciatis repellendus beatae vero? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt ratione maiores cupiditate, ad ipsa enim pariatur magni! Ullam vero ea corporis nostrum nam fugit aperiam.
+                Vitae perspiciatis repellendus beatae vero?</div>
+            <div class="item form-item-4">
+                    <div class="form-image">
+                        <img src="./assets/images/Hosenbiene.jpg" alt="wild bee near its hole dig in the soil">
+                    </div> 
+            </div>
         </main>
     
-        <footer class="item item-6">
+        <footer class="item item-6 form-item-6">
             <ul class="social-networks">
                 <li>
                     <a href="https://facebook.com" target="_blank" rel="noopener"
