style: center the photo in Form Page

--- a/form.html
+++ b/form.html
@@ -44,11 +44,24 @@
                 Deserunt ratione maiores cupiditate, ad ipsa enim pariatur magni! Ullam vero ea corporis nostrum nam fugit aperiam.
                 Vitae perspiciatis repellendus beatae vero? Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Deserunt ratione maiores cupiditate, ad ipsa enim pariatur magni! Ullam vero ea corporis nostrum nam fugit aperiam.
-                Vitae perspiciatis repellendus beatae vero?</div>
+                Vitae perspiciatis repellendus beatae vero?
+            <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Deserunt ratione maiores cupiditate, ad ipsa enim pariatur magni! Ullam vero ea corporis nostrum nam fugit aperiam.
+        Vitae perspiciatis repellendus beatae vero? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Deserunt ratione maiores cupiditate, ad ipsa enim pariatur magni! Ullam vero ea corporis nostrum nam fugit aperiam.
+        Vitae perspiciatis repellendus beatae vero? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Deserunt ratione maiores cupiditate, ad ipsa enim pariatur magni! Ullam vero ea corporis nostrum nam fugit aperiam.
+        Vitae perspiciatis repellendus beatae vero? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Deserunt ratione maiores cupiditate, ad ipsa enim pariatur magni! Ullam vero ea corporis nostrum nam fugit aperiam.
+        Vitae perspiciatis repellendus beatae vero? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Deserunt ratione maiores cupiditate, ad ipsa enim pariatur magni! Ullam vero ea corporis nostrum nam fugit aperiam.
+        Vitae perspiciatis repellendus beatae vero?
+    <br></div>
             <div class="item form-item-4">
-                    <div class="form-image">
-                        <img src="./assets/images/Hosenbiene.jpg" alt="wild bee near its hole dig in the soil">
-                    </div> 
+                       <div class="form-image">
+                        <img src="./assets/images/Hosenbiene.jpg" alt="wild bee near its hole dug in the soil">
+                       </div> 
             </div>
         </main>
     
