--- a/form.html
+++ b/form.html
@@ -30,7 +30,7 @@
             </nav>
         </header>
         <main class="form-main">
-            <div class="item item-2">
+            <div class="item item-2 form-item-2">
                 <h1 id="title">Permaculture Map Berlin</h1>
                 <h2>The Problem is the Solution</h2>
             </div>
@@ -38,22 +38,20 @@
                 <form action="#/post" method="post">
                     <fieldset>
                         <legend>Projects</legend>
-                        <p>
-                            <label for="projectName">Project Name:</label>
-                            <input type="text" name="projectName" id="projectName" placeholder="Peace of Land" autocomplete="on"
-                                required autofocus>
-                        </p>
-                        <p>
-                            <label for="projectAddress">Projects Address:</label>
-                            <input type="text" name="projectAddress" id="projectAddress" placeholder="Unter den Linden"
-                                autocomplete="on" required>
-                        </p>
+                            <p>
+                                <label class="form-paragraph" for="projectName">Project Name:</label>
+                                <input type="text" name="projectName" id="projectName" placeholder="Peace of Land" autocomplete="on"
+                                    required autofocus>
+                            </p>
+                            <p>
+                                <label class="form-paragraph" for="projectAddress">Projects Address:</label>
+                                <input type="text" name="projectAddress" id="projectAddress" placeholder="Unter den Linden"
+                                    autocomplete="on" required>
+                            </p>
                 </form>
-                
-                <textarea name="description" id="description" cols="30" rows="20" placeholder="Describe the permaculture project here!">
-                
-                       </textarea>
-                </fieldset>
+                        <textarea name="description" id="description" cols="20" rows="20" placeholder="Describe the permaculture project here!">
+                        </textarea>
+                    </fieldset>
             </div>
             <div class="item item-4 form-item-4">
                     <div class="form-image">
