--- a/form.html
+++ b/form.html
@@ -60,7 +60,7 @@
             </div>
         </main>
     
-        <footer class="item item-6 form-item-6">
+        <footer class="item item-6">
             <ul class="social-networks">
                 <li>
                     <a href="https://facebook.com" target="_blank" rel="noopener"
@@ -74,6 +74,7 @@
                     <a href="https://youtube.com" target="_blank" rel="noopener"
                         aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
                 </li>
+            </ul>
         </footer>
   </body>
   <script
