feat: add logo to header section

--- a/form.html
+++ b/form.html
@@ -19,7 +19,9 @@
     <div class="container">
         <header class="item item-1">
             <div class="logo-div">
-                <p class="logo-paragraph">Logo</p>
+                <a class="logo-link" chref="https://www.peaceof.land/">Peace of Land
+                    <img src="./assets/images/Logo.jpg" alt="Logo raised hand with agricultural tool" />
+                </a>
             </div>
             <nav>
                 <ul class="menu">
