--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
       content="permaculture, berlin, interactive map, regenerative urban agriculture"
     />
     <title>permaculture-map-berlin</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <div class="container">
       <header class="item item-1">
         <div class="logo-div">
-          <p class="logo-paragraph">Logo</p>
+          <a class="logo-link" chref="https://www.peaceof.land/"
+            >Peace of Land
+            <img class="logo-image"
+              src="./assets/images/Logo.jpg"
+              alt="Logo raised hand with agricultural tool" neme=""
+            />
+          </a>
         </div>
         <nav>
           <ul class="menu">
