--- a/form.html
+++ b/form.html
@@ -18,11 +18,9 @@
   <body>
     <div class="container">
         <header class="item item-1">
-            <div class="logo-div">
-                <a class="logo-link" chref="https://www.peaceof.land/">Peace of Land
-                    <img src="./assets/images/Logo.jpg" alt="Logo raised hand with agricultural tool" />
-                </a>
-            </div>
+            <a href="https://www.peaceof.land/" target="_blank"><img class="logo-image" src="./assets/images/Logo.jpg"
+                    alt="Logo raised hand with agricultural tool" />
+            </a>
             <nav>
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
