feat: linked Home Page with Form Page by the clickable CONTRIBUTE! button

--- a/index.html
+++ b/index.html
@@ -67,8 +67,14 @@
             allowfullscreen
             allow="geolocation"
           ></iframe>
-          <button type="button">CONTRIBUTE!</button>
+          <button
+            type="button"
+            onclick='location.href="https://8000-vladaalek-berlin-permacu-dg942txigd.us2.codeanyapp.com/form.html"'
+          >
+            CONTRIBUTE!
+          </button>
         </div>
+        <!--it doesn^t work-->
 
         <div class="item item-5">
           <h3 class="paragraph-title">Why Choose Permaculture?</h3>
