--- a/form.html
+++ b/form.html
@@ -25,7 +25,7 @@
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="form.html">Form Page</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
         </header>
