style: add grid structure and introduce photo

--- a/about.html
+++ b/about.html
@@ -36,14 +36,14 @@
       </header>
 
       <main>
-        <div class="item item-2">
+        <div class="item item-2 about-item-1">
           <h1 id="title">Permaculture Map Berlin</h1>
           <h2>The Problem is the Solution</h2>
         </div>
-        <div class="about-item-1">about-item-1</div>
         <div class="about-item-2">about-item-2</div>
         <div class="about-item-3">about-item-3</div>
         <div class="about-item-4">about-item-4</div>
+        <div class="about-item-5">about-item-5</div>
       </main>
       <footer class="item item-6">
         <ul class="social-networks">
