--- a/form.html
+++ b/form.html
@@ -29,7 +29,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="form-main">
+        <main>
             <div class="item item-2 form-item-2">
                 <h1 id="title">Permaculture Map Berlin</h1>
                 <h2>The Problem is the Solution</h2>
