style: add new values for main grid

--- a/about.html
+++ b/about.html
@@ -36,11 +36,22 @@
       </header>
 
       <main>
-        <div class="item item-2 about-item-1">
+        <div class="item item-2">
           <h1 id="title">Permaculture Map Berlin</h1>
           <h2>The Problem is the Solution</h2>
         </div>
-        <div class="about-item-2">about-item-2</div>
+        <div class="about-item-2">
+          <p>
+            about-item-2 <br />
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+            et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+            sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+            et dolore magna aliquyam erat, sed diam voluptua.
+          </p>
+        </div>
         <div class="about-item-3">about-item-3</div>
         <div class="about-item-4">about-item-4</div>
         <div class="about-item-5">about-item-5</div>
