style: small style changes based on mentors advices on various pages

--- a/contribute.html
+++ b/contribute.html
@@ -24,7 +24,7 @@
             <nav>
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="form.html">Form Page</a></li>
+                    <li><a href="contribute.html">Contribute</a></li>
                     <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
@@ -58,7 +58,7 @@
                                 placeholder="Describe the permaculture project here!">
                                                             </textarea>
                                 
-                                <a href="form.html"><input class="submit-button" type="submit" value="SUBMIT!"></a>
+                                <a href="contribute.html"><input class="submit-button" type="submit" value="SUBMIT!"></a>
 
                             
                 </form>
