--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <nav>
           <ul class="menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="form.html">Form Page</a></li>
+            <li><a href="contribute.html">Contribute</a></li>
             <li><a href="about.html">About Us</a></li>
           </ul>
         </nav>
@@ -41,6 +41,7 @@
           <h2>The Problem is the Solution</h2>
         </div>
         <div class="about-item-2">
+          <h3 class="paragraph-title">About Peace of Land</h3>
           <p>
             about-item-2 <br />
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
@@ -49,7 +50,14 @@
             et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
             Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
             sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-            et dolore magna aliquyam erat, sed diam voluptua.
+            et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor
+            sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
+            kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+            amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+            diam nonumy eirmod tempor invidunt ut labore et dolore magna
+            aliquyam erat, sed diam voluptua.
           </p>
         </div>
         <div class="about-item-3">about-item-3</div>
