--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav>
           <ul class="menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="form.html">Form Page</a></li>
+            <li><a href="contribute.html">Contribute</a></li>
             <li><a href="about.html">About Us</a></li>
           </ul>
         </nav>
@@ -61,11 +61,6 @@
           <iframe
             class="map-source"
             src="https://storymaps.arcgis.com/stories/403c3e6e3bad481fab1bce4972cbb7db?cover=false"
-            width="100%"
-            height="500px"
-            frameborder="0"
-            allowfullscreen
-            allow="geolocation"
           ></iframe>
           <button
             type="button"
