--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <header class="item item-1">
+    <div class="page-container">
+      <header class="header-section">
         <a href="https://www.peaceof.land/" target="_blank"
           ><img
             class="logo-image"
@@ -36,33 +36,14 @@
       </header>
 
       <main>
-        <div class="item item-2">
-          <h1 id="title">Permaculture Map Berlin</h1>
-          <h2>The Problem is the Solution</h2>
-        </div>
-        <div class="about-item-2">
-          <h3 class="paragraph-title">About Peace of Land</h3>
-          <p>
-            about-item-2 <br />
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-            et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
-            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-            sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-            et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor
-            sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
-            kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
-            amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-            diam nonumy eirmod tempor invidunt ut labore et dolore magna
-            aliquyam erat, sed diam voluptua.
-          </p>
-        </div>
-        <div class="about-item-3">about-item-3</div>
-        <div class="about-item-4">about-item-4</div>
-        <div class="about-item-5">about-item-5</div>
+            <div class="container grid-container--fill>
+                <div class="child-div child-div-1">div1</div>
+                <div class="child-div child-div-2">div2</div>
+                <div class="child-div child-div-3">div3</div>
+                <div class="child-div child-div-4">div4</div>
+                <div class="child-div child-div-5">div5</div>
+                <div class="child-div child-div-6">div6</div>
+            </div>
       </main>
       <footer class="item item-6">
         <ul class="social-networks">
@@ -102,3 +83,32 @@
     crossorigin="anonymous"
   ></script>
 </html>
+
+
+<div class="item item-2">
+    <h1 id="title">Permaculture Map Berlin</h1>
+    <h2>The Problem is the Solution</h2>
+</div>
+<div class="about-item-2">
+    <h3 class="paragraph-title">About Peace of Land</h3>
+    <p>
+        about-item-2 <br />
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+        nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+        erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+        et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+        Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+        sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+        et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor
+        sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+        invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+        At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
+        kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+        amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+        diam nonumy eirmod tempor invidunt ut labore et dolore magna
+        aliquyam erat, sed diam voluptua.
+    </p>
+</div>
+<div class="about-item-3">about-item-3</div>
+<div class="about-item-4">about-item-4</div>
+<div class="about-item-5">about-item-5</div>
