--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <header class="item item-1">
+    <div class="page-container">
+      <header class="header-section">
         <a href="https://www.peaceof.land/" target="_blank"
           ><img
             class="logo-image"
