style: add semantic values to html files

--- a/about.html
+++ b/about.html
@@ -36,14 +36,17 @@
       </header>
 
       <main>
-            <div class="container grid-container--fill>
-                <div class="child-div child-div-1">div1</div>
-                <div class="child-div child-div-2">div2</div>
-                <div class="child-div child-div-3">div3</div>
-                <div class="child-div child-div-4">div4</div>
-                <div class="child-div child-div-5">div5</div>
-                <div class="child-div child-div-6">div6</div>
-            </div>
+        <div class="container grid-container--fill>
+        <div class="title-section">
+            <h1 id="title">Permaculture Map Berlin</h1>
+            <h2>The Problem is the Solution</h2>
+        </div>
+        <div class="child-div child-div-2">div2</div>
+        <div class="child-div child-div-3">div3</div>
+        <div class="child-div child-div-4">div4</div>
+        <div class="child-div child-div-5">div5</div>
+        <div class="child-div child-div-6">div6</div>
+        </div>
       </main>
       <footer class="item item-6">
         <ul class="social-networks">
@@ -84,8 +87,8 @@
   ></script>
 </html>
 
-
-<div class="item item-2">
+/*to erase down bellow*/
+<div class="item">
     <h1 id="title">Permaculture Map Berlin</h1>
     <h2>The Problem is the Solution</h2>
 </div>
