--- a/contribute.html
+++ b/contribute.html
@@ -30,7 +30,7 @@
             </nav>
         </header>
         <main>
-            <div class="item item-2 form-item-2">
+            <div class="title-section">
                 <h1 id="title">Permaculture Map Berlin</h1>
                 <h2>The Problem is the Solution</h2>
             </div>
