--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </header>
 
       <main>
-        <div class="item item-2">
+        <div class="title-section">
           <h1 id="title">Permaculture Map Berlin</h1>
           <h2>The Problem is the Solution</h2>
         </div>
