refactor: add semantic values to index.html and contribute.html files

--- a/index.html
+++ b/index.html
@@ -36,57 +36,62 @@
       </header>
 
       <main>
-        <div class="title-section">
-          <h1 id="title">Permaculture Map Berlin</h1>
-          <h2>The Problem is the Solution</h2>
-        </div>
-        <div class="item item-3">
-          <h3 class="paragraph-title">What's Your Next Step?</h3>
-          <p class="text">
-            Embark on a journey through our interactive map and uncover the vast
-            array of permaculture projects flourishing in Berlin. Rooted in the
-            foundational principles of Earth Care, People Care, and Fair Shares,
-            each project tells a unique story of sustainable living and
-            community collaboration.
-          </p>
-          <br />
-          <!--check this br tag-->
-          <p>
-            <em>Dig in</em>, be inspired, and consider adding your own touch.
-            Together, we can grow this map into an even more comprehensive and
-            dynamic reflection of Berlin's thriving permaculture scene.
-          </p>
-        </div>
-        <div class="item item-4">
-          <iframe
-            class="map-source"
-            src="https://storymaps.arcgis.com/stories/403c3e6e3bad481fab1bce4972cbb7db?cover=false"
-          ></iframe>
-          <button
-            type="button"
-            onclick='location.href="https://8000-vladaalek-berlin-permacu-dg942txigd.us2.codeanyapp.com/form.html"'
-          >
-            CONTRIBUTE!
-          </button>
-        </div>
-        <!--it doesn^t work-->
+        <section>
+            <div class="title-section">
+                <h1 id="title">Permaculture Map Berlin</h1>
+                <h2>The Problem is the Solution</h2>
+            </div>
+        </section>
+        
+        <section>
+          <div class="text-explanation">
+            <h3 class="paragraph-title">What's Your Next Step?</h3>
+            <p>
+              Embark on a journey through our interactive map and uncover the
+              vast array of permaculture projects flourishing in Berlin. Rooted
+              in the foundational principles of Earth Care, People Care, and
+              Fair Shares, each project tells a unique story of sustainable
+              living and community collaboration.
+            </p>
+            <br />
+            <p>
+              Dig in, be inspired, and consider adding your own touch. Together,
+              we can grow this map into an even more comprehensive and dynamic
+              reflection of Berlin's thriving permaculture scene.
+            </p>
+          </div>
+        </section>
+        <section>
+          <div class="map-section">
+            <iframe
+              class="map-source"
+              src="https://storymaps.arcgis.com/stories/403c3e6e3bad481fab1bce4972cbb7db?cover=false"
+            ></iframe>
+            <button type="button" onclick='location.href="/contribute.html"'>
+              CONTRIBUTE!
+            </button>
+          </div>
+        </section>
 
-        <div class="item item-5">
-          <h3 class="paragraph-title">Why Choose Permaculture?</h3>
-          <p>
-            At its core, permaculture is a transformative and regenerative
-            solution to today's pressing ecological challenges. From
-            rejuvenating soil fertility and championing water conservation to
-            mitigating climate change and bolstering biodiversity, it's a
-            holistic approach with tangible benefits for our planet.
-          </p>
-          <p>
-            But the magic of permaculture doesn't stop there. It also fosters a
-            vibrant social environment, advocating for a healthier lifestyle,
-            cooperative spirit, shared resources, and synergistic actions across
-            communities.
-          </p>
-        </div>
+        <section>
+          <div class="text-explanation">
+            <h3 class="paragraph-title">Why Choose Permaculture?</h3>
+            <p>
+              At its core, permaculture is a transformative and regenerative
+              solution to today's pressing ecological challenges. From
+              rejuvenating soil fertility and championing water conservation to
+              mitigating climate change and bolstering biodiversity, it's a
+              holistic approach with tangible benefits for our planet.
+            </p>
+            <br />
+            <p>
+              But the magic of permaculture doesn't stop there. It also fosters
+              a vibrant social environment, advocating for a healthier
+              lifestyle, cooperative spirit, shared resources, and synergistic
+              actions across communities.
+            </p>
+          </div>
+        </section>
       </main>
       <footer class="item item-6">
         <ul class="social-networks">
