style: add responsive features for three screen sizes

--- a/contribute.html
+++ b/contribute.html
@@ -67,7 +67,7 @@
         </section>
         
 
-          <div class="form-section-div">
+          <div class="form-section-div-absolute">
             <img
               class="form-section-photo"
               src="./assets/images/Wildkraeuterernte_im_Sieb_quer_800x600.jpg"
