style: improve the semantic value of contribute-page-photo

--- a/contribute.html
+++ b/contribute.html
@@ -77,7 +77,7 @@
           </div>
         </div>
 
-        <div class="item form-item-4"></div>
+        <div class="item contribute-page-photo"></div>
       </main>
 
       <footer class="item item-6">
