feat: add photos to About Us Page and paragraphs and style both of them

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <a href="https://www.peaceof.land/" target="_blank"
           ><img
             class="logo-image"
-            src="./assets/images/Logo.jpg"
+            src="./assets/images/Logo.webp"
             alt="Logo raised hand with agricultural tool"
           />
         </a>
@@ -36,20 +36,46 @@
       </header>
 
       <main>
-        <div class="title-section">
-          <h1 id="title">Permaculture Map Berlin</h1>
-          <h2>The Problem is the Solution</h2>
-        </div>
-        <div class="container grid-container--fill">
-          <div class="child-div child-div-1">div1</div>
-          <div class="child-div child-div-2">div2</div>
-          <div class="child-div child-div-3">div3</div>
-          <div class="child-div child-div-4">div4</div>
-          <div class="child-div child-div-5">div5</div>
-          <div class="child-div child-div-6">div6</div>
-        </div>
+        <section>
+          <div class="title-section">
+            <h1 id="title">Permaculture Map Berlin</h1>
+            <h2>The Problem is the Solution</h2>
+          </div>
+        </section>
+        <section>
+          <div class="container grid-container--fill">
+            <section>
+              <div class="child-div child-div-1 text-explanation">
+                <h3 class="paragraph-title">Peace of Land: Embracing Permaculture</h3>
+                <p>
+                To us, permaculture is more than just a method—Permaculture is a guiding philosophy that touches every aspect of our
+                lives. It guides us in crafting, establishing, and maintaining efficient land and agricultural systems that cater to
+                human needs and resonate harmoniously with local living beings. The small ecosystems we nurture are designed for
+                stability, resilience, and self-sufficiency. Our mission is to foster holistic systems that cherish and sustain all
+                forms of life.
+                </p>
+                <br />
+                <h3 class="paragraph-title">The three core ethical principles of permaculture are:</h3>
+                <p>
+            
+                <ol>
+                    <li>Care for the Earth</li>
+                    <li>Care for People</li>
+                    <li>Fair Share</li>
+                </ol>
+                </p>
+              </div>
+            </section>
+
+            <div class="child-div child-div-2 about-us-photo-2"></div>
+            <div class="child-div child-div-3">div3</div>
+            <div class="child-div child-div-4 about-us-photo-4"></div>
+            <div class="child-div child-div-5">div5</div>
+            <div class="child-div child-div-6 about-us-photo-6"></div>
+          </div>
+        </section>
       </main>
-      <footer class="item item-6">
+      <footer>
         <ul class="social-networks">
           <li>
             <a
