--- a/contribute.html
+++ b/contribute.html
@@ -21,7 +21,7 @@
         <a href="https://www.peaceof.land/" target="_blank"
           ><img
             class="logo-image"
-            src="./assets/images/Logo.jpg"
+            src="./assets/images/Logo.webp"
             alt="Logo raised hand with agricultural tool"
           />
         </a>
@@ -70,7 +70,7 @@
           <div class="form-section-div-absolute">
             <img
               class="form-section-photo"
-              src="./assets/images/Wildkraeuterernte_im_Sieb_quer_800x600.jpg"
+              src="./assets/images/Wildkraeuterernte_im_Sieb_quer_800x600.webp"
               alt="Wild herbs nicely decorated"
               name="Food forest products"
             />
@@ -80,7 +80,7 @@
         <div class="item contribute-page-photo"></div>
       </main>
 
-      <footer class="item item-6">
+      <footer>
         <ul class="social-networks">
           <li>
             <a
