--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://www.peaceof.land/" target="_blank"
           ><img
             class="logo-image"
-            src="./assets/images/Logo.jpg"
+            src="./assets/images/Logo.webp"
             alt="Logo raised hand with agricultural tool"
           />
         </a>
@@ -37,12 +37,12 @@
 
       <main>
         <section>
-            <div class="title-section">
-                <h1 id="title">Permaculture Map Berlin</h1>
-                <h2>The Problem is the Solution</h2>
-            </div>
+          <div class="title-section">
+            <h1 id="title">Permaculture Map Berlin</h1>
+            <h2>The Problem is the Solution</h2>
+          </div>
         </section>
-        
+
         <section>
           <div class="text-explanation">
             <h3 class="paragraph-title">What's Your Next Step?</h3>
@@ -93,7 +93,7 @@
           </div>
         </section>
       </main>
-      <footer class="item item-6">
+      <footer>
         <ul class="social-networks">
           <li>
             <a
