style: add additional style to About Us page in Maind Section

--- a/about.html
+++ b/about.html
@@ -68,9 +68,40 @@
             </section>
 
             <div class="child-div child-div-2 about-us-photo-2"></div>
-            <div class="child-div child-div-3">div3</div>
+            <section>
+                <div class="child-div child-div-3 text-explanation">
+                    <h3 class="paragraph-title">Relocated to Kulturmarkthalle</h3>
+                    <p>
+                        To us, permaculture is more than just a method—Permaculture is a guiding philosophy that touches every aspect of our
+                        lives. It guides us in crafting, establishing, and maintaining efficient land and agricultural systems that cater to
+                        human needs and resonate harmoniously with local living beings. The small ecosystems we nurture are designed for
+                        stability, resilience, and self-sufficiency. Our mission is to foster holistic systems that cherish and sustain all
+                        forms of life.
+                    </p>
+                </div>
+            </section>
+            
             <div class="child-div child-div-4 about-us-photo-4"></div>
-            <div class="child-div child-div-5">div5</div>
+            <section>
+                <div class="child-div child-div-3 text-explanation">
+                    <h3 class="paragraph-title">Contact and Support Us!</h3>
+                    <p>
+                        <ul class="conntact-list">
+                            <li>General Questions: info@peaceof.land</li>
+                            <li>Events: veranstaltung@peaceof.land</li>
+                            <li>Support: veranstaltung@peaceof.land</li>
+                        </ul> 
+                    </p>
+                    <h3 class="paragraph-title">Our Bank Account</h3>
+                    <p>
+                        Konto-Inhaber: Peace of Land e.V.
+                        Institut: Berliner Sparkasse
+                        IBAN: DE63 1005 0000 0190 9933 75
+                        BIC: BELADEBEXXX
+                        Verwendungszweck: Spende (Donation) <+ ggf. gewünschte Verwendung wie z.B. für Mietkosten>
+                    </p>
+                </div>
+            </section>
             <div class="child-div child-div-6 about-us-photo-6"></div>
           </div>
         </section>
