style: add styles to About Us page

--- a/about.html
+++ b/about.html
@@ -95,8 +95,8 @@
                     <h3 class="paragraph-title">Our Bank Account</h3>
                     <p>
                         Konto-Inhaber: Peace of Land e.V.
-                        Institut: Berliner Sparkasse
-                        IBAN: DE63 1005 0000 0190 9933 75
+                        Institut: Berliner Sparkasse <br>
+                        <span class="iban-span">DE63 1005 0000 0190 9933 75</span>  <br>
                         BIC: BELADEBEXXX
                         Verwendungszweck: Spende (Donation) <+ ggf. gewünschte Verwendung wie z.B. für Mietkosten>
                     </p>
