style: style Home and Contribute page

--- a/contribute.html
+++ b/contribute.html
@@ -77,7 +77,10 @@
           </div>
         </div>
 
-        <div class="item contribute-page-photo"></div>
+        <div class="item photo-section-div">
+            <div class="contribute-page-photo">
+            </div>
+        </div>
       </main>
 
       <footer>
