--- a/index.html
+++ b/index.html
@@ -65,9 +65,17 @@
           <div class="map-section">
             <iframe
               class="map-source"
-              src="https://storymaps.arcgis.com/stories/403c3e6e3bad481fab1bce4972cbb7db?cover=false"
+              src="https://storymaps.arcgis.com/stories/403c3e6e3bad481fab1bce4972cbb7db"
+              width="100%"
+              height="500px"
+              frameborder="0"
+              allowfullscreen
+              allow="geolocation"
             ></iframe>
-            <button type="button" onclick='location.href="/contribute.html"'>
+            <button
+              type="button"
+              onclick='location.href="https://berlin-permaculture-map/contribute.html"'
+            >
               CONTRIBUTE!
             </button>
           </div>
